--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   </style>
 </head>
 <body>
-  <div class="container">
+  <main class="container">
     <section class="sedans first">
       <div class="wrapper">
         <img src="./images/icon-sedans.svg" alt="sedan logo" class="logo">
@@ -47,10 +47,12 @@
         <a href="#" class="button right">Learn More</a>
       </div>
     </section>
-  </div>
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Konstantin Novakovic</a>.
-  </div>
+  </main>
+  <footer>
+    <div class="attribution">
+      Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
+      Coded by <a href="#">Konstantin Novakovic</a>.
+    </div>
+  </footer>
 </body>
 </html>
