--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   </style>
 </head>
 <body>
-  <main class="container">
+  <main class="container" role="main">
     <section class="sedans first">
       <div class="wrapper">
         <img src="./images/icon-sedans.svg" alt="sedan logo" class="logo">
@@ -48,7 +48,7 @@
       </div>
     </section>
   </main>
-  <footer>
+  <footer role="contentinfo">
     <div class="attribution">
       Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
       Coded by <a href="#">Konstantin Novakovic</a>.
